Add section project finance personal, part 1

--- a/docs/projects/laravel-finza-app/laravel.mdx
+++ b/docs/projects/laravel-finza-app/laravel.mdx
@@ -1,19 +1,19 @@
 ---
-sidebar_position: 1
-id: 001-finza-laravel
-sidebar_label: Introducción
-sidebar_class_name: green
-title: Laravel
+sidebar_position: 2
+sidebar_label: 📌 Laravel
+title: 📌 Framework Laravel
 tags:
     - Laravel
     - ¿Qué es laravel?
-    - Requerimientos técnicos del servidor
     - Base de datos soportadas
+    - Requerimientos técnicos del servidor
 ---
 
 import Ul from '@site/src/components/Ul/Ul.jsx';
 
-__Laravel__ es un framework __PHP__, para aplicaciones web, usando el patrón de diseño __MVC__.
+__Laravel__ es un framework __PHP__, para aplicaciones web, que utiliza
+el patrón de diseño __MVC__. Además cuenta con un __ORM__ integrado llamado
+__Eloquent__.
 
 ## 🗄️ Base de datos soportados
 
@@ -21,7 +21,7 @@ Como casi todas las aplicaciones web modernas interactúan con una bases de dato
 __Laravel__ permite la integración extremadamente simple, ofreciendo la utilización de
 del lenguaje __SQL__, un generador de consulta y el __ORM Eloquent__.
 
-Actualmente laravel solamente soporta estos 5 gestores de bases de datos.
+Actualmente __laravel__ solamente soporta estos __5__ gestores de __bases de datos__.
 
 <Ul>
     <li>🟢 MariaDB 10.3+</li>
