--- a/docs/projects/laravel-finza-app/database/category.mdx
+++ b/docs/projects/laravel-finza-app/database/category.mdx
@@ -8,7 +8,10 @@ tags:
     - Proyecto de finanzas personales
 ---
 
-Para registras los tipos de gatos que se realiza, lo registraré en categorías.
+Para controlar mayor el __control de gastos__ podemos administrarlo en diferentes
+Categorías, como __gastos generales__, __gastos de vivienda__, __gastos de servicios__,
+etc.
+Para administrar los __tipos de gastos__, se registrará en la tabla de categorías.
 
 ## 📄 Columnas
 
@@ -18,7 +21,8 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <th>Columna</th>
             <th>Tipo</th>
             <th>Tamaño</th>
-            <th>nulo</th>
+            <th>Nulo</th>
+            <th>Único</th>
             <th>Auto incrementable</th>
             <th>Default</th>
             <th>Comentario</th>
@@ -31,6 +35,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td></td>
             <td>🚫</td>
             <td>✅</td>
+            <td>✅</td>
             <td></td>
             <td>Clave primaria</td>
         </tr>
@@ -40,6 +45,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td></td>
             <td>🚫</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>0</td>
             <td>Identificador del usuario, que realiza la ultima operación</td>
         </tr>
@@ -47,6 +53,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td><strong>type</strong></td>
             <td>INT</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>2</td>
@@ -61,6 +68,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td>VARCHAR</td>
             <td>255</td>
             <td>🚫</td>
+            <td>✅</td>
             <td>🚫</td>
             <td></td>
             <td></td>
@@ -71,6 +79,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td>45</td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td></td>
         </tr>
@@ -78,6 +87,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td><strong>created_date</strong></td>
             <td>TIMESTAMP</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>NOW()</td>
@@ -89,6 +99,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td></td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
         </tr>
@@ -97,6 +108,7 @@ Para registras los tipos de gatos que se realiza, lo registraré en categorías.
             <td>TIMESTAMP</td>
             <td></td>
             <td>✅</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
