--- a/docs/projects/laravel-finza-app/database/script-table.mdx
+++ b/docs/projects/laravel-finza-app/database/script-table.mdx
@@ -9,7 +9,8 @@ tags:
     - Proyecto de finanzas personales
 ---
 
-Script __SQL__, para crear tablas en __MySQL__.
+Script __SQL__, para crear tablas en __MySQL__ del proyecto
+finanzas personales.
 
 ## 🏗️ Crear base de datos desde terminal
 
@@ -25,9 +26,12 @@ mysqladmin -u root -p create dbFinza
 
 ## 🛬 Importar script desde terminal
 
-Una forma rápida de crear tablas es mediante un __script SQL__,
-donde estén definidas las tablas y ejecutar el siguiente comando
-desde una terminal
+Una forma rápida de crear tablas a nuestra base de datos
+es mediante un __script SQL__,
+donde estén definidas correctamente las tablas y no allá
+errores de sintaxis.
+Para ejecutar un archivo con __script SQL__, ejecutemos
+el siguiente comando.
 
 ```bash
 # Sintaxis
