--- a/docs/projects/laravel-finza-app/database/users.mdx
+++ b/docs/projects/laravel-finza-app/database/users.mdx
@@ -8,7 +8,7 @@ tags:
     - Proyecto de finanzas personales
 ---
 
-En está tabla se registrarán los usuarios.
+En está tabla se registrarán los usuarios del sistema.
 
 :::info
 Por cada base de datos solo se podrá registrará 10 usuarios.
@@ -22,7 +22,8 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <th>Columna</th>
             <th>Tipo</th>
             <th>Tamaño</th>
-            <th>nulo</th>
+            <th>Nulo</th>
+            <th>Único</th>
             <th>Auto incrementable</th>
             <th>Default</th>
             <th>Comentario</th>
@@ -35,6 +36,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td></td>
             <td>🚫</td>
             <td>✅</td>
+            <td>✅</td>
             <td></td>
             <td>Clave primaria</td>
         </tr>
@@ -42,6 +44,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td><strong>name</strong></td>
             <td>VARCHAR</td>
             <td>65</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td></td>
@@ -52,6 +55,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td>VARCHAR</td>
             <td>120</td>
             <td>🚫</td>
+            <td>✅</td>
             <td>🚫</td>
             <td></td>
             <td></td>
@@ -60,6 +64,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td><strong>password</strong></td>
             <td>VARCHAR</td>
             <td>225</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td></td>
@@ -71,6 +76,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td>225</td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td></td>
             <td></td>
         </tr>
@@ -78,6 +84,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td><strong>created_date</strong></td>
             <td>TIMESTAMP</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>NOW()</td>
@@ -89,6 +96,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td></td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
         </tr>
@@ -97,6 +105,7 @@ Por cada base de datos solo se podrá registrará 10 usuarios.
             <td>TIMESTAMP</td>
             <td></td>
             <td>✅</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
