--- a/docs/projects/laravel-finza-app/intro.mdx
+++ b/docs/projects/laravel-finza-app/intro.mdx
@@ -12,11 +12,11 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Ul from '@site/src/components/Ul/Ul.jsx';
 
-Este es un proyecto personal, teniendo el objetivo de mejorar,
-mi proceso actual de __control de gatos__, por medio de una __aplicaciones web__.
+Este es un proyecto personal, que tiene el objetivo de mejorar,
+el proceso actual de __control de gastos__, por medio de una __aplicación web__.
 
-Así mismo aprender el uso del framework __Laravel__ en su versión 10 
-y usando el gestor de base de datos __MySQL__.
+El proyecto se estará desarrollando con el framework __Laravel 10__
+y el gestor de base de datos __MySQL 8.0.31__.
 
 ## 👨‍💻 Entorno local
 
@@ -30,10 +30,10 @@ Debemos de contar con:
     <li>🔘 Una base de datos (MySQL)</li>
     <li>🔘 Un editor de código (Visual Studio Code)</li>
     <li>🔘 Un cliente REST (Postman)</li>
-    <li>🔘 Composer</li>
+    <li>🔘 El gestor de dependencias (Composer)</li>
 </Ul>
 
-Usare las siguientes versiones:
+En mi __entorno local__, tengo las siguientes versiones:
 
 <Ul>
     <li>✅ PHP 8.2.1</li>
@@ -52,13 +52,12 @@ Programas adicionales:
 
 ## 🎲 Opciones de descarga
 
-A continuación se da algunas opciones de instalación de software para el
-__entorno local__.
+Estos son algunos programas para montar un __entorno local__.
 
 <Tabs groupId="operating-systems">
     <TabItem value="win" label="Windows">
         <p>En <strong>Windows</strong> podemos utilizar los siguientes programas
-            para nuestro <strong>servidor web local</strong> que puede incluye
+            para nuestro <strong>servidor web local</strong> que puede incluir
             alguna versión de <strong>Apache, PHP, MySQL </strong>
             o <strong>MariaDB</strong> </p>
         <Ul>
@@ -67,7 +66,7 @@ __entorno local__.
             <li>🛠️ <a href="https://laragon.org/download/index.html">Laragon 🔗</a></li>
             <li>🛠️ <a href="https://usbwebserver.yura.mk.ua/index.php">USBWebServer 🔗</a></li>
         </Ul>
-        <p>También debe instalar <strong>Composer</strong> siguiendo los pasos desde 
+        <p>No olvide instalar <strong>Composer</strong> siguiendo los pasos desde 
         su <a href="https://getcomposer.org/download/">Página Oficial</a>.</p>
         
     </TabItem>
