--- a/docs/projects/laravel-finza-app/laravel.mdx
+++ b/docs/projects/laravel-finza-app/laravel.mdx
@@ -11,9 +11,9 @@ tags:
 
 import Ul from '@site/src/components/Ul/Ul.jsx';
 
-__Laravel__ es un framework __PHP__, para aplicaciones web, que utiliza
-el patrón de diseño __MVC__. Además cuenta con un __ORM__ integrado llamado
-__Eloquent__.
+__Laravel__ es un framework __PHP__, de código abierto, para desarrollar
+aplicaciones web, brindando herramientas para acelerar el proceso de
+construcción.
 
 ## 🗄️ Base de datos soportados
 
