--- a/docs/projects/laravel-finza-app/database/account.mdx
+++ b/docs/projects/laravel-finza-app/database/account.mdx
@@ -8,10 +8,10 @@ tags:
     - Proyecto de finanzas personales
 ---
 
-Para el control de nuestro dinero tenemos a la disposición de diferentes
-herramientas donde podemos guardar nuestro dinero, como puede ser,
-uno de los muchos banco que existen o en efectivo.
-En está tabla se almacenará los diferentes cuentas que tenga el usuario.
+Para controlar nuestro efectivo, tenemos a la disposición diferentes herramientas
+donde podemos administrar nuestro efectivo, como puede ser una cuenta bancaria
+o tener dinero físico.
+En esta tabla se almacenará las diferentes cuentas que pueda tener un usuario.
 
 ## 📄 Columnas
 
@@ -21,7 +21,8 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <th>Columna</th>
             <th>Tipo</th>
             <th>Tamaño</th>
-            <th>nulo</th>
+            <th>Nulo</th>
+            <th>Único</th>
             <th>Auto incrementable</th>
             <th>Default</th>
             <th>Comentario</th>
@@ -34,6 +35,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td></td>
             <td>🚫</td>
             <td>✅</td>
+            <td>✅</td>
             <td></td>
             <td>Clave primaria</td>
         </tr>
@@ -41,6 +43,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td><strong>user_id</strong></td>
             <td>INT</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>0</td>
@@ -51,6 +54,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td>VARCHAR</td>
             <td>255</td>
             <td>🚫</td>
+            <td>✅</td>
             <td>🚫</td>
             <td></td>
             <td></td>
@@ -61,6 +65,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td>45</td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td></td>
         </tr>
@@ -68,6 +73,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td><strong>created_date</strong></td>
             <td>TIMESTAMP</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>NOW()</td>
@@ -79,6 +85,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td></td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
         </tr>
@@ -87,6 +94,7 @@ En está tabla se almacenará los diferentes cuentas que tenga el usuario.
             <td>TIMESTAMP</td>
             <td></td>
             <td>✅</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
