--- a/docs/projects/laravel-finza-app/database/ingresses.mdx
+++ b/docs/projects/laravel-finza-app/database/ingresses.mdx
@@ -8,7 +8,7 @@ tags:
     - Proyecto de finanzas personales
 ---
 
-En está tabla se registrarán las operaciones de ingreso.
+En está tabla se registrarán las entradas de efectivo.
 
 ## 📄 Columnas
 
@@ -18,7 +18,8 @@ En está tabla se registrarán las operaciones de ingreso.
             <th>Columna</th>
             <th>Tipo</th>
             <th>Tamaño</th>
-            <th>nulo</th>
+            <th>Nulo</th>
+            <th>Único</th>
             <th>Auto incrementable</th>
             <th>Default</th>
             <th>Comentario</th>
@@ -31,6 +32,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td></td>
             <td>🚫</td>
             <td>✅</td>
+            <td>✅</td>
             <td></td>
             <td>Clave primaria</td>
         </tr>
@@ -38,6 +40,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td><strong>subaccount_id</strong></td>
             <td>INT</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td></td>
@@ -49,6 +52,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td></td>
             <td>🚫</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td></td>
             <td>Clave foráneo de tabla subcategoría</td>
         </tr>
@@ -56,6 +60,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td><strong>user_id</strong></td>
             <td>INT</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td></td>
@@ -67,6 +72,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td></td>
             <td>🚫</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td></td>
             <td></td>
         </tr>
@@ -76,6 +82,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td>255</td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td></td>
             <td></td>
         </tr>
@@ -83,6 +90,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td><strong>created_date</strong></td>
             <td>TIMESTAMP</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>NOW()</td>
@@ -94,6 +102,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td></td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
         </tr>
@@ -102,6 +111,7 @@ En está tabla se registrarán las operaciones de ingreso.
             <td>TIMESTAMP</td>
             <td></td>
             <td>✅</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
