--- a/docs/projects/laravel-finza-app/database/model-er.mdx
+++ b/docs/projects/laravel-finza-app/database/model-er.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 1
 sidebar_label: 🗺️ Modelo relacional
-title: 🗺️ Modelo Relacional 
+title: 🗺️ Modelo relacional del proyecto finanzas personales
 tags:
     - Modelo relacional
     - Proyecto de finanzas personales
