--- a/docs/projects/laravel-finza-app/database/subcategory.mdx
+++ b/docs/projects/laravel-finza-app/database/subcategory.mdx
@@ -8,8 +8,8 @@ tags:
     - Proyecto de finanzas personales
 ---
 
-Para mayor detalle de los tipos de gatos, de detallará las categorías,
-con mayor detalle.
+Para mayor detalle de los tipos de gastos, se detallará las categorías
+con mayor detalle en la tabla de sub categorías.
 
 ## 📄 Columnas
 
@@ -19,7 +19,8 @@ con mayor detalle.
             <th>Columna</th>
             <th>Tipo</th>
             <th>Tamaño</th>
-            <th>nulo</th>
+            <th>Nulo</th>
+            <th>Único</th>
             <th>Auto incrementable</th>
             <th>Default</th>
             <th>Comentario</th>
@@ -32,6 +33,7 @@ con mayor detalle.
             <td></td>
             <td>🚫</td>
             <td>✅</td>
+            <td>✅</td>
             <td></td>
             <td>Clave primaria</td>
         </tr>
@@ -39,6 +41,7 @@ con mayor detalle.
             <td><strong>category_id</strong></td>
             <td>INT</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>0</td>
@@ -50,6 +53,7 @@ con mayor detalle.
             <td></td>
             <td>🚫</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td></td>
             <td>Identificador del usuario, que realiza la ultima operación</td>
         </tr>
@@ -57,6 +61,7 @@ con mayor detalle.
             <td><strong>type</strong></td>
             <td>INT</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>2</td>
@@ -71,6 +76,7 @@ con mayor detalle.
             <td>VARCHAR</td>
             <td>255</td>
             <td>🚫</td>
+            <td>✅</td>
             <td>🚫</td>
             <td></td>
             <td></td>
@@ -81,6 +87,7 @@ con mayor detalle.
             <td>45</td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td></td>
         </tr>
@@ -88,6 +95,7 @@ con mayor detalle.
             <td><strong>created_date</strong></td>
             <td>TIMESTAMP</td>
             <td></td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>🚫</td>
             <td>NOW()</td>
@@ -99,6 +107,7 @@ con mayor detalle.
             <td></td>
             <td>✅</td>
             <td>🚫</td>
+            <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
         </tr>
@@ -107,6 +116,7 @@ con mayor detalle.
             <td>TIMESTAMP</td>
             <td></td>
             <td>✅</td>
+            <td>🚫</td>
             <td>🚫</td>
             <td>NULL</td>
             <td>Información de auditoria</td>
