Add gif for finance personal

--- a/docs/projects/laravel-finza-app/intro.mdx
+++ b/docs/projects/laravel-finza-app/intro.mdx
@@ -18,6 +18,8 @@ el proceso actual de __control de gastos__, por medio de una __aplicación web__
 El proyecto se estará desarrollando con el framework __Laravel 10__
 y el gestor de base de datos __MySQL 8.0.31__.
 
+![finance-personal](./assets/finance-personal.gif)
+
 ## 👨‍💻 Entorno local
 
 Antes de programar debemos de contar con algunos requerimientos técnicos mínimos
