Add gif finance personal laravel

--- a/docs/projects/laravel-finza-app/laravel.mdx
+++ b/docs/projects/laravel-finza-app/laravel.mdx
@@ -15,6 +15,8 @@ __Laravel__ es un framework __PHP__, de código abierto, para desarrollar
 aplicaciones web, brindando herramientas para acelerar el proceso de
 construcción.
 
+![Finance personal - laravel](./assets/finance-personal-laravel.gif)
+
 ## 🗄️ Base de datos soportados
 
 Como casi todas las aplicaciones web modernas interactúan con una bases de datos,
