--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,14 +4,16 @@ description: Página principal.
 hide_table_of_contents: true
 ---
 
+import HomeBannerImageFeature from "@site/src/components/HomeBannerImageFeature";
+
 <div align="center">
 
-<h1>👋 Hola!, Soy Ivan Martinez 👨‍💻!</h1>
+<h1>👋 Hola, Soy Ivan Martinez 👨‍💻!</h1>
+
+<HomeBannerImageFeature />
 
 [![Youtube](https://img.shields.io/badge/youtube-red?style=for-the-badge&logo=youtube&logoColor=white)](https://www.youtube.com/@igmr_)
 [![Linkedin](https://img.shields.io/badge/linkedin-0077B5?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/in/igmr)
 [![GitHub](https://img.shields.io/badge/github-gray?style=for-the-badge&logo=github&logoColor=white)](https://github.com/igmr)
-
-![Header](./assets/banner.png)
 
 </div>
