--- a/docs/inventory/database/script-postgresql.mdx
+++ b/docs/inventory/database/script-postgresql.mdx
@@ -45,45 +45,45 @@ CREATE TABLE IF NOT EXISTS users(
     username   VARCHAR(255) NOT NULL UNIQUE,
     email      VARCHAR(255) NOT NULL UNIQUE,
     password   VARCHAR(255) NOT NULL,
-    create_at  TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at  TIMESTAMP        NULL DEFAULT NULL,
-    delete_at  TIMESTAMP        NULL DEFAULT NULL,
+    created_at  TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at  TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at  TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT pkUser  PRIMARY KEY(id)
 );
 
 CREATE TABLE IF NOT EXISTS brands(
     id          SERIAL       NOT NULL UNIQUE,
     description VARCHAR(255) NOT NULL UNIQUE,
-    create_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP        NULL DEFAULT NULL,
-    delete_at   TIMESTAMP        NULL DEFAULT NULL,
+    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT  pkBrand  PRIMARY KEY(id)
 );
 
 CREATE TABLE IF NOT EXISTS warehouses(
     id          SERIAL       NOT NULL UNIQUE,
     description VARCHAR(255) NOT NULL UNIQUE,
-    create_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP        NULL DEFAULT NULL,
-    delete_at   TIMESTAMP        NULL DEFAULT NULL,
+    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT  pkWarehouse  PRIMARY KEY(id)
 );
 
 CREATE TABLE IF NOT EXISTS groups_units(
     id          SERIAL       NOT NULL UNIQUE,
     description VARCHAR(255) NOT NULL UNIQUE,
-    create_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP        NULL DEFAULT NULL,
-    delete_at   TIMESTAMP        NULL DEFAULT NULL,
+    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT  pkGroup  PRIMARY KEY(id)
 );
 
 CREATE TABLE IF NOT EXISTS categories(
     id          SERIAL       NOT NULL UNIQUE,
     description VARCHAR(255) NOT NULL UNIQUE,
-    create_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP        NULL DEFAULT NULL,
-    delete_at   TIMESTAMP        NULL DEFAULT NULL,
+    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT  pkCategory  PRIMARY KEY(id)
 );
 
@@ -92,9 +92,9 @@ CREATE TABLE IF NOT EXISTS ingresses(
     observation VARCHAR(255)       NULL DEFAULT NULL,
     status      ENUM_OPERATION NOT NULL DEFAULT 'active',
     created     DATE           NOT NULL DEFAULT NOW(),
-    create_at   TIMESTAMP      NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP          NULL DEFAULT NULL,
-    delete_at   TIMESTAMP          NULL DEFAULT NULL,
+    created_at   TIMESTAMP      NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP          NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP          NULL DEFAULT NULL,
     CONSTRAINT  pkIngress  PRIMARY KEY(id)
 );
 
@@ -103,9 +103,9 @@ CREATE TABLE IF NOT EXISTS egresses(
     observation VARCHAR(255)       NULL DEFAULT NULL,
     status      ENUM_OPERATION NOT NULL DEFAULT 'active',
     created     DATE           NOT NULL DEFAULT NOW(),
-    create_at   TIMESTAMP      NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP          NULL DEFAULT NULL,
-    delete_at   TIMESTAMP          NULL DEFAULT NULL,
+    created_at   TIMESTAMP      NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP          NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP          NULL DEFAULT NULL,
     CONSTRAINT  pkEgress  PRIMARY KEY(id)
 );
 
@@ -113,9 +113,9 @@ CREATE TABLE IF NOT EXISTS subcategories(
     id          SERIAL       NOT NULL UNIQUE,
     category_id INTEGER      NOT NULL DEFAULT 1,
     description VARCHAR(255) NOT NULL UNIQUE,
-    create_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP        NULL DEFAULT NULL,
-    delete_at   TIMESTAMP        NULL DEFAULT NULL,
+    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT  pkSubcategory          PRIMARY KEY(id),
     CONSTRAINT  fkSubcategoryCategory  FOREIGN KEY(category_id) REFERENCES categories(id)
 );
@@ -124,9 +124,9 @@ CREATE TABLE IF NOT EXISTS units(
     id          SERIAL       NOT NULL UNIQUE,
     group_id    INTEGER      NOT NULL DEFAULT 1,
     description VARCHAR(255) NOT NULL UNIQUE,
-    create_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at   TIMESTAMP        NULL DEFAULT NULL,
-    delete_at   TIMESTAMP        NULL DEFAULT NULL,
+    created_at   TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at   TIMESTAMP        NULL DEFAULT NULL,
+    deleted_at   TIMESTAMP        NULL DEFAULT NULL,
     CONSTRAINT  pkUnit       PRIMARY KEY(id),
     CONSTRAINT  fkUnitGroup  FOREIGN KEY(group_id) REFERENCES groups_units(id)
 );
@@ -140,9 +140,9 @@ CREATE TABLE IF NOT EXISTS products(
     type_product    ENUM_TYPE_PRODUCT NOT NULL DEFAULT 'product',
     images          VARCHAR(255)          NULL DEFAULT NULL,
     code            VARCHAR(65)           NULL DEFAULT NULL,
-    create_at       TIMESTAMP         NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at       TIMESTAMP             NULL DEFAULT NULL,
-    delete_at       TIMESTAMP             NULL DEFAULT NULL,
+    created_at       TIMESTAMP         NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at       TIMESTAMP             NULL DEFAULT NULL,
+    deleted_at       TIMESTAMP             NULL DEFAULT NULL,
     CONSTRAINT      pkProduct             PRIMARY KEY(id),
     CONSTRAINT      fkProductUnit         FOREIGN KEY(unit_id)        REFERENCES units(id),
     CONSTRAINT      fkProductBrand        FOREIGN KEY(brand_id)       REFERENCES brands(id),
@@ -155,9 +155,9 @@ CREATE TABLE IF NOT EXISTS maximun_and_minimum(
     warehouse_id    INTEGER           NOT NULL,
     maximum         DECIMAL(10,2)     NOT NULL DEFAULT 0,
     minimum         DECIMAL(10,2)     NOT NULL DEFAULT 0,
-    create_at       TIMESTAMP         NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at       TIMESTAMP             NULL DEFAULT NULL,
-    delete_at       TIMESTAMP             NULL DEFAULT NULL,
+    created_at       TIMESTAMP         NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at       TIMESTAMP             NULL DEFAULT NULL,
+    deleted_at       TIMESTAMP             NULL DEFAULT NULL,
     CONSTRAINT      pkMaxMin          PRIMARY KEY(id),
     CONSTRAINT      fkMaxMinProduct   FOREIGN KEY(product_id)   REFERENCES products(id),
     CONSTRAINT      fkMaxMinWarehouse FOREIGN KEY(warehouse_id) REFERENCES warehouses(id)
@@ -168,9 +168,9 @@ CREATE TABLE IF NOT EXISTS products_units(
     product_id      INTEGER               NOT NULL,
     unit_id         INTEGER               NOT NULL,
     factor          DECIMAL(10,2)         NOT NULL,
-    create_at       TIMESTAMP             NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at       TIMESTAMP                 NULL DEFAULT NULL,
-    delete_at       TIMESTAMP                 NULL DEFAULT NULL,
+    created_at       TIMESTAMP             NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at       TIMESTAMP                 NULL DEFAULT NULL,
+    deleted_at       TIMESTAMP                 NULL DEFAULT NULL,
     CONSTRAINT      pkProductUnit         PRIMARY KEY(id),
     CONSTRAINT      fkProductUnitProduct  FOREIGN KEY(product_id) REFERENCES products(id),
     CONSTRAINT      fkProductUnitUnit     FOREIGN KEY(unit_id)    REFERENCES units(id)
@@ -187,9 +187,9 @@ CREATE TABLE IF NOT EXISTS ingresses_details(
     quantity       DECIMAL(10,2)            NOT NULL DEFAULT 0,
     factor         DECIMAL(10,2)            NOT NULL DEFAULT 0,
     price          DECIMAL(10,2)            NOT NULL DEFAULT 0,
-    create_at      TIMESTAMP                NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at      TIMESTAMP                    NULL DEFAULT NULL,
-    delete_at      TIMESTAMP                    NULL DEFAULT NULL,
+    created_at      TIMESTAMP                NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at      TIMESTAMP                    NULL DEFAULT NULL,
+    deleted_at      TIMESTAMP                    NULL DEFAULT NULL,
     CONSTRAINT     pkIngressDetail          PRIMARY KEY(id),
     CONSTRAINT     fkIngressDetailIngress   FOREIGN KEY(ingress_id)   REFERENCES ingresses(id),
     CONSTRAINT     fkIngressDetailWarehouse FOREIGN KEY(warehouse_id) REFERENCES warehouses(id),
@@ -209,9 +209,9 @@ CREATE TABLE IF NOT EXISTS egresses_details(
     quantity       DECIMAL(10,2)           NOT NULL DEFAULT 0,
     factor         DECIMAL(10,2)           NOT NULL DEFAULT 0,
     price          DECIMAL(10,2)           NOT NULL DEFAULT 0,
-    create_at      TIMESTAMP               NOT NULL DEFAULT CURRENT_TIMESTAMP,
-    update_at      TIMESTAMP                   NULL DEFAULT NULL,
-    delete_at      TIMESTAMP                   NULL DEFAULT NULL,
+    created_at      TIMESTAMP               NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    updated_at      TIMESTAMP                   NULL DEFAULT NULL,
+    deleted_at      TIMESTAMP                   NULL DEFAULT NULL,
     CONSTRAINT     pkEgressDetail          PRIMARY KEY(id),
     CONSTRAINT     fkEgressDetailEgress    FOREIGN KEY(egress_id)    REFERENCES egresses(id),
     CONSTRAINT     fkEgressDetailWarehouse FOREIGN KEY(warehouse_id) REFERENCES warehouses(id),
