Update brand module

--- a/docs/inventory/apirest/brand/create.mdx
+++ b/docs/inventory/apirest/brand/create.mdx
@@ -96,7 +96,7 @@ Tipo: <SpanGreen>application/json</SpanGreen>
 
 Marca creado.
 
-```js title="201 HTTP/1.1"
+```json title="201 HTTP/1.1"
 {
     "code": 201,
     "data": {
@@ -115,7 +115,7 @@ Marca creado.
 
 Error de validación de datos
 
-```js title="422 HTTP/1.1"
+```json title="422 HTTP/1.1"
 {
   "code": 422,
   "data": {
