--- a/docs/inventory/apirest/brand/delete.mdx
+++ b/docs/inventory/apirest/brand/delete.mdx
@@ -90,7 +90,7 @@ Tipo: <SpanGreen>application/json</SpanGreen>
     <SpanGreen>HTTP 200 Json</SpanGreen>
   </summary>
 
-Grupo eliminado.
+Marca eliminado.
 
 ```js title="200 HTTP/1.1"
 {
