--- a/docs/inventory/apirest/brand/find.mdx
+++ b/docs/inventory/apirest/brand/find.mdx
@@ -92,7 +92,7 @@ Tipo: <SpanGreen>application/json</SpanGreen>
 
 Marca recuperado exitosamente.
 
-```js title="200 HTTP/1.1"
+```json title="200 HTTP/1.1"
 {
     "code": 200,
     "data": {
