--- a/docs/inventory/apirest/brand/index.mdx
+++ b/docs/inventory/apirest/brand/index.mdx
@@ -9,6 +9,7 @@ tags:
 ---
 
 import SpanYellow from "@site/src/components/Html/SpanYellow";
+import Ul from "@site/src/components/Html/Ul";
 
 Este objeto representa una marca
 
