--- a/docs/inventory/apirest/brand/read.mdx
+++ b/docs/inventory/apirest/brand/read.mdx
@@ -82,7 +82,7 @@ Tipo: <SpanGreen>application/json</SpanGreen>
 
 Lista de marcas activas.
 
-```js title="200 HTTP/1.1"
+```json title="200 HTTP/1.1"
 {
     "code": 200,
     "data": [
