--- a/docs/inventory/apirest/brand/update.mdx
+++ b/docs/inventory/apirest/brand/update.mdx
@@ -108,7 +108,7 @@ Tipo: <SpanGreen>application/json</SpanGreen>
 
 Marca actualizado.
 
-```js title="200 HTTP/1.1"
+```json title="200 HTTP/1.1"
 {
   "code": 200,
   "data": {
@@ -127,7 +127,7 @@ Marca actualizado.
 
 Error de validación de datos
 
-```js title="422 HTTP/1.1"
+```json title="422 HTTP/1.1"
 {
   "code": 422,
   "data": {
