--- a/docs/inventory/apirest/brand/delete.mdx
+++ b/docs/inventory/apirest/brand/delete.mdx
@@ -92,7 +92,7 @@ Tipo: <SpanGreen>application/json</SpanGreen>
 
 Marca eliminado.
 
-```js title="200 HTTP/1.1"
+```json title="200 HTTP/1.1"
 {
     "code": 200,
     "data": {
@@ -111,7 +111,7 @@ Marca eliminado.
 
 Error de validación de datos
 
-```js title="422 HTTP/1.1"
+```json title="422 HTTP/1.1"
 {
   "code": 422,
   "data": {
