Update documentation finance personal

--- a/docs/finza/index.mdx
+++ b/docs/finza/index.mdx
@@ -1,22 +1,45 @@
 ---
 sidebar_position: 1
-sidebar_label: 🚀 Introducción
-title: Aplicación web de finanzas personales
+sidebar_label: Bienvenido
+title: Bienvenido
 tags:
-  - Introducción
+  - Bienvenido
   - Aplicación web de finanzas personales
 ---
 
 import FinzaBannerImageFeature from "@site/src/components/Finza/FinzaBannerImageFeature";
 import Ul from "@site/src/components/Html/Ul";
 import SpanYellow from "@site/src/components/Html/SpanYellow";
+import SpanGreen from "@site/src/components/Html/SpanGreen";
 
-<FinzaBannerImageFeature/>
+<FinzaBannerImageFeature />
 
-En este proyecto constará de una <SpanYellow>Aplicación Web</SpanYellow> y
-una <SpanYellow>Api REST</SpanYellow> construido con:
+El proyecto esta compuesto de una <SpanYellow>aplicación web</SpanYellow> y el 
+desarrollo de una <SpanYellow>API REST</SpanYellow>. En la documentación se
+encontrará:
 
 <Ul>
-  <li>🟢 Laravel 10</li>
-  <li>🟢 MySQL</li>
+  <li>✅ Base de datos</li>
+  <li>✅ Proyecto</li>
+  <li>✅ API REST</li>
+</Ul>
+
+## ⛓ Herramientas
+
+Para el desarrollo del sistema se utilizo las siguiente herramientas de desarrollo.
+
+<Ul>
+  <li>✅ <SpanYellow>Laravel</SpanYellow> <em>Versión <u>10</u></em></li>
+  <li>✅ <SpanYellow>MySQL</SpanYellow> <em>Versión <u>8.0.32</u></em></li>
+  <li>✅ <SpanYellow>PHP</SpanYellow> <em>Versión <u>8.0.32</u></em></li>
+  <li>✅ <SpanYellow>Composer</SpanYellow> <em>Versión <u>2.5.5</u></em></li>
+</Ul>
+
+## Código fuente
+
+El código del proyecto presente está publicado en <SpanYellow>Github</SpanYellow> .
+
+<Ul>
+  <li>📦 <a href="https://github.com/igmr/db-finza">Base de datos</a></li>
+  <li>📦 <a href="https://github.com/igmr/app-finza">Proyecto</a></li>
 </Ul>
